# AntigravityCam

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  ReceiverApp.exe - Shortcut.lnk  build_windows.bat  ios_install_guide.md
.github/workflows/: main.yml
app future plans and improvement/: ios app should run in the backgroun.txt
debug/: log.txt  log_20260113_145417.txt  log_20260113_150006.txt  log_20260113_150110.txt  log_20260113_151324.txt  log_20260113_151527.txt  log_20260113_151905.txt  log_20260113_152700.txt  log_20260113_160123.txt  log_20260113_164436.txt  log_20260113_164753.txt  log_20260113_194518.txt  log_20260113_200653.txt  log_20260113_200956.txt  log_20260113_201210.txt  log_20260113_201927.txt  log_20260113_202241.txt  log_20260113_202506.txt  log_20260113_202855.txt  log_20260113_203100.txt  log_20260113_203145.txt  log_20260113_203442.txt  log_20260113_203742.txt  log_20260113_204002.txt  log_20260113_204319.txt  log_20260113_204649.txt  log_20260113_205025.txt  log_20260113_205316.txt  log_20260113_205732.txt  log_20260113_210117.txt  log_20260113_210222.txt  log_20260113_211046.txt  log_20260113_233736.txt  log_20260113_234554.txt  log_20260113_234825.txt  log_20260113_235138.txt  log_20260113_235419.txt  log_20260113_235904.txt  log_20260114_000055.txt  log_20260114_000248.txt  (+43 more)
ios/: AppDelegate.swift  CameraViewController.swift  Info.plist  project.yml
windows/ReceiverApp/: CMakeLists.txt  main.cpp
windows/ReceiverApp/resources/: app.rc
windows/VirtualCameraFilter/: AntigravityCam.def  CMakeLists.txt  CaptureSource.cpp  CaptureSource.h
windows/common/: SharedMemory.h
